2007-01-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders.

        Testcase for http://bugs.webkit.org/show_bug.cgi?id=12072

        * fast/forms/select-align-expected.checksum: Added.
        * fast/forms/select-align-expected.png: Added.
        * fast/forms/select-align-expected.txt: Added.
        * fast/forms/select-align.html: Added.

2007-01-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Mitz.

        Testcase for http://bugs.webkit.org/show_bug.cgi?id=12071

        * fast/forms/button-align-expected.checksum: Added.
        * fast/forms/button-align-expected.png: Added.
        * fast/forms/button-align-expected.txt: Added.
        * fast/forms/button-align.html: Added.

2007-01-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Mitz and Anders.

        Testcase for http://bugs.webkit.org/show_bug.cgi?id=7075

        * fast/forms/textarea-align-expected.checksum: Added.
        * fast/forms/textarea-align-expected.png: Added.
        * fast/forms/textarea-align-expected.txt: Added.
        * fast/forms/textarea-align.html: Added.

2007-01-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin.

        Testcases for http://bugs.webkit.org/show_bug.cgi?id=3360

        * fast/forms/input-align-expected.checksum: Added.
        * fast/forms/input-align-expected.png: Added.
        * fast/forms/input-align-expected.txt: Added.
        * fast/forms/input-align-image-expected.checksum: Added.
        * fast/forms/input-align-image-expected.png: Added.
        * fast/forms/input-align-image-expected.txt: Added.
        * fast/forms/input-align-image.html: Added.
        * fast/forms/input-align.html: Added.

2007-01-02  Nikolas Zimmermann  <zimmermann@kde.org>

        Rubber stamped by Rob.

        Adding all carto.net SVG/JS examples. Highlights some nifty bugs.

        * svg/carto.net/button-expected.checksum: Added.
        * svg/carto.net/button-expected.png: Added.
        * svg/carto.net/button-expected.txt: Added.